Eliminate massive vertical gaps and fix animations

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -8,8 +8,8 @@
   opacity: 1;
   height: auto;
   margin: auto;
-  margin-bottom: 50px;
-  padding: 120px 0px;
+  margin-bottom: 20px;
+  padding: 40px 0px;
 }
 
 .career-section h2 {
@@ -205,10 +205,9 @@
     padding-left: 5%;
   }
   .career-section {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 20px 0px;
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     align-items: start;
     place-items: inherit;
     justify-content: left;
