--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -1,5 +1,5 @@
 .work-section h2 {
-  margin-top: 100px;
+  margin-top: 20px;
   font-size: 70px;
   font-weight: 500;
 }
@@ -203,11 +203,10 @@
 @media only screen and (max-width: 1025px) {
   .work-section {
     height: auto;
-    min-height: 100vh;
   }
   .work-section h2 {
-    margin-top: 50px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
   .work-container {
     align-content: normal;
